Bug 1351873 - Bind OSPreferences::GetSystemLocale to use `intl.locale.os` pref. r=rnewman

This patch fixes a regression that we hit on Fennec when we handed over control
over language negotiation to LocaleService in bug 1347306.

The problem is that we currently do not have good Android bindings for
OSPreferences::GetSystemLocale and in result we could not negotiate
languages between user-selected OS locales and available locales.

The temporary solution implemented here binds android OS preferences to
`intl.locale.os` pref which is set on Locale:OS event in browser.js.
In LocaleService we add a listener on the pref to renegotiate languages
when OS locale changes.

MozReview-Commit-ID: KTqjYSzLNNO

--HG--
extra : rebase_source : 61b692e81ce67cdb15a7962e41ebe78164dbe1aa