intl/locale/LocaleService.cpp
@@ -22,9 +22,14 @@
 #define MATCH_OS_LOCALE_PREF "intl.locale.matchOS"
 #define SELECTED_LOCALE_PREF "general.useragent.locale"
 
+//XXX: This pref is used only by Android and we use it to emulate
+//     retrieving OS locale until we get proper hook into JNI in bug 1337078.
+#define ANDROID_OS_LOCALE_PREF "intl.locale.os"
+
 static const char* kObservedPrefs[] = {
   MATCH_OS_LOCALE_PREF,
   SELECTED_LOCALE_PREF,
+  ANDROID_OS_LOCALE_PREF,
   nullptr
 };
 
@@ -434,12 +439,15 @@ LocaleService::Observe(nsISupports *aSubject, const char *aTopic,
   // At the moment the only thing we're observing are settings indicating
   // user requested locales.
   NS_ConvertUTF16toUTF8 pref(aData);
-  if (pref.EqualsLiteral(MATCH_OS_LOCALE_PREF) || pref.EqualsLiteral(SELECTED_LOCALE_PREF)) {
+  if (pref.EqualsLiteral(MATCH_OS_LOCALE_PREF) ||
+      pref.EqualsLiteral(SELECTED_LOCALE_PREF)) {
     Refresh();
     nsCOMPtr<nsIObserverService> obs = mozilla::services::GetObserverService();
     if (obs) {
       obs->NotifyObservers(nullptr, "intl:requested-locales-changed", nullptr);
     }
+  } else if (pref.EqualsLiteral(ANDROID_OS_LOCALE_PREF)) {
+    Refresh();
   }
   return NS_OK;
 }
